--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="AI Engineer & Full-Stack Developer Portfolio" />
     <meta name="theme-color" content="#3B82F6" />
-    <title>Your Name | AI Engineer & Full-Stack Developer</title>
+    <title>ABAOXOMTIEU | AI Engineer & Full-Stack Developer</title>
   </head>
   <body>
     <div id="root"></div>
